--- a/i18n/po/id_ID.po
+++ b/i18n/po/id_ID.po
@@ -19,8 +19,8 @@ msgid "-- Select co-signer --"
 msgstr "-- Pilih co-signer --"
 
 #: public/views/preferencesGlobal.html:135
-msgid "About Trustnote"
-msgstr "Tentang Trustnote"
+msgid "About RingNetwork"
+msgstr "Tentang RingNetwork"
 
 #: src/js/controllers/copayers.js:8
 #: src/js/controllers/preferencesDelete.js:9
@@ -90,8 +90,8 @@ msgid "All Wallet Addresses"
 msgstr "Alamat semua wallet"
 
 #: public/views/translators.html:52
-msgid "All contributions to Trustnote's translation are welcome. Sign up at crowdin.com and join the Trustnote project at"
-msgstr "Menerima semua kontribusi terjemahan untuk Trustnote. Daftarkan melalui crowdin.com lalu bergabung di proyek Trustnote pada"
+msgid "All contributions to RingNetwork's translation are welcome. Sign up at crowdin.com and join the RingNetwork project at"
+msgstr "Menerima semua kontribusi terjemahan untuk RingNetwork. Daftarkan melalui crowdin.com lalu bergabung di proyek RingNetwork pada"
 
 #: public/views/modals/multi-payment.html:65
 msgid "Already Paid"
@@ -216,8 +216,8 @@ msgid "Browser unsupported"
 msgstr "Browser tidak didukung"
 
 #: public/views/modals/destination-address.html:119
-msgid "Trustnote address"
-msgstr "Alamat Trustnote"
+msgid "RingNetwork address"
+msgstr "Alamat RingNetwork"
 
 #: public/views/includes/password.html:24
 msgid "CANCEL"
@@ -369,8 +369,8 @@ msgid "Could not import. Check input file and password"
 msgstr "Tidak bisa mengimport. Periksa input file dan kata sandi"
 
 #: src/js/controllers/walletHome.js:49
-msgid "Could not recognize a valid Trustnote QR Code"
-msgstr "Tidak bisa mengenali QR Code Trustnote yang valid"
+msgid "Could not recognize a valid RingNetwork QR Code"
+msgstr "Tidak bisa mengenali QR Code RingNetwork yang valid"
 
 #: src/js/controllers/walletHome.js:598
 msgid "Could not send payment"
@@ -490,8 +490,8 @@ msgid "Download CSV file"
 msgstr "Unduh file CSV"
 
 #: public/views/splash.html:26
-msgid "Download the entire Trustnote database"
-msgstr "Unduh seluruh database Trustnote"
+msgid "Download the entire RingNetwork database"
+msgstr "Unduh seluruh database RingNetwork"
 
 #: public/views/correspondentDevice.html:26
 #: public/views/modals/destination-address.html:38
@@ -757,8 +757,8 @@ msgid "Multidevice Wallet"
 msgstr "Wallet Beragam Perangkat"
 
 #: public/views/walletHome.html:218
-msgid "My Trustnote address"
-msgstr "Alamat Trustnote saya"
+msgid "My RingNetwork address"
+msgstr "Alamat RingNetwork saya"
 
 #: public/views/correspondentDevice.html:297
 msgid "My recording preference"
@@ -1398,8 +1398,8 @@ msgid "WARNINGS:"
 msgstr "PERINGATAN"
 
 #: public/views/splash.html:53
-msgid "WELCOME TO TRUSTNOTE"
-msgstr "SELAMAT DATANG DI TRUSTNOTE"
+msgid "WELCOME TO RingNetwork"
+msgstr "SELAMAT DATANG DI RingNetwork"
 
 #: public/views/copayers.html:24
 msgid "Waiting for co-signers"
@@ -1435,8 +1435,8 @@ msgid "Wallet Name (at creation)"
 msgstr "Nama Wallet (saat pembuatan)"
 
 #: src/js/services/profileService.js:392
-msgid "Wallet already in Trustnote:"
-msgstr "Wallet sudah ada di Trustnote"
+msgid "Wallet already in RingNetwork:"
+msgstr "Wallet sudah ada di RingNetwork"
 
 #: public/views/create.html:48
 msgid "Wallet name"
@@ -1603,8 +1603,8 @@ msgid "or"
 msgstr "atau"
 
 #: public/views/backup.html:24
-msgid "or backup all Trustnote data at"
-msgstr "atau buat cadangan semua data Trustnote pada"
+msgid "or backup all RingNetwork data at"
+msgstr "atau buat cadangan semua data RingNetwork pada"
 
 #: public/views/modals/offer-contract.html:43
 msgid "peer pays"
